# Ink

./: README.md  index.html  install-context-menu.ps1  markdown_test_doc.md  package-lock.json  package.json  remove-context-menu.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: App.tsx  Editor.tsx  Icons.tsx  MarkdownPreview.tsx  PdfViewer.tsx  Sidebar.tsx  SplitView.tsx  Tab.tsx  TabBar.tsx  find-bar.css
src/hooks/: useKeyboardShortcuts.ts  useSingleInstance.ts
src/store/: tabStore.ts
src/styles/: globals.css
src/types/: html2pdf.d.ts  markdown-it-plugins.d.ts
src/utils/: markdown.ts
