[package]
name = "ink"
version = "0.0.1"
edition = "2024"

# Expose lib.rs as a crate so main.rs can call ink_lib::run()
[lib]
name = "ink_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog           = "2"
tauri-plugin-fs               = "2"
tauri-plugin-opener           = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
tauri-plugin-shell = "2.3.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
